sample-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: thenodejs-api
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: "node.et5fm.gebeya.co"
    http:
      paths:
      - path: /courses/*
        backend:
          serviceName: thenodejs
          servicePort: 80
      - path: /courses
        backend:
          serviceName: thenodejs
          servicePort: 80
      - path: /imprint/*
        backend:
          serviceName: thenodejs
          servicePort: 80
      - path: /imprint
        backend:
          serviceName: thenodejs
          servicePort: 80
      - path: /landingPage/*
        backend:
          serviceName: thenodejs
          servicePort: 80
      - path: /landingPage
        backend:
          serviceName: thenodejs
          servicePort: 80
      - path: /settings/*
        backend:
          serviceName: thenodejs
          servicePort: 80
      - path: /settings
        backend:
          serviceName: thenodejs
          servicePort: 80
